# wikilint

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: publish.yml
docs/: PYPI.md
src/wikilint/: __init__.py  __main__.py  cli.py  frontmatter.py  models.py  report.py  scan.py
tests/: test_scan.py
tests/fixtures/wiki/concepts/: a.md  b.md  orphan.md
