[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wikilint"
version = "0.1.0"
description = "Lint agent-maintained markdown wikis — orphans, backlinks, dangling links, stale tags"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "cemini23" }]
keywords = ["wiki", "markdown", "lint", "agents", "knowledge-base"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
wikilint = "wikilint.cli:main"

[project.urls]
Homepage = "https://github.com/cemini23/wikilint"
Repository = "https://github.com/cemini23/wikilint"

[tool.hatch.build.targets.wheel]
packages = ["src/wikilint"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
